dnl Process this file with autoconf to produce a configure script.
dnl
dnl aclocal_cache.m4, included by sowing/confdb/aclocal.m4, fixes 
dnl bugs in autoconf caching.
dnl
dnl The file name here refers to a file in the source being configured
AC_INIT(include/mpitest.h)
dnl
AC_CONFIG_AUX_DIR(../../confdb)
dnl
echo "RUNNING CONFIGURE FOR MPI TESTS"
otherlangs=""
AC_ARG_ENABLE(f77,
[--enable-f77 - Turn on Fortran 77 tests (default)],,enable_f77=yes)
AC_ARG_ENABLE(f90,
[--enable-f90 - Turn on Fortran 90 tests (default)],,enable_f90=yes)
AC_ARG_ENABLE(cxx,
[--enable-cxx - Turn on C++ tests (default)],,enable_cxx=yes)
PAC_PROG_MAKE
if test -z "$top_build_dir" ; then 
    top_build_dir=`cd ../.. ; pwd`
fi
# The following choices can cause problems if we configure as part of a 
# MPICH2 configure, because the libraries may not yet exist.  In 
# that case, we wait to make these definitions until after the
# tests, since the environment variables for the compilers is set 
# as part of the initial build
if test "$FROM_MPICH2" != yes ; then
    CC=$top_build_dir/bin/mpicc
    FC=$top_build_dir/bin/mpif77
    F90=$top_build_dir/bin/mpif90
    CXX=$top_build_dir/bin/mpicxx
else
    # Remove the libraries, since they will not be needed for the
    # few tests that we do
    saveLIBS=$LIBS
    LIBS=
fi
# Clear the CPPFLAGS, since the MPI configure will have added many items
# that are not required for user MPI programs.
CPPFLAGS=
#
# Note that some versions of autoconf will insist that the compiler 
# produce executables at this point, which is why we must do something
# special for building within MPICH2
AC_C_LONG_DOUBLE
AC_MSG_CHECKING([whether long long available])
AC_TRY_COMPILE(,[long long a;],pac_cv_have_long_long=yes,pac_cv_have_long_long=no)
AC_MSG_RESULT($pac_cv_have_long_long)
if test "$pac_cv_have_long_long" ; then 
    AC_DEFINE(HAVE_LONG_LONG,1,[Define if compiler supports long long])
fi
#
# Define functionality that we support
AC_DEFINE(HAVE_MPI_WIN_CREATE,1,[Define if MPI_Win_create is available])

# Now, select the proper compilers for the tests
if test "$FROM_MPICH2" = yes ; then
    LIBS=$saveLIBS
    CC=$top_build_dir/bin/mpicc
    FC=$top_build_dir/bin/mpif77
    CXX=$top_build_dir/bin/mpicxx
    F90=$top_build_dir/bin/mpif90
fi
# Simple tests for which other languages we can handle
f77dir="#"
AC_SUBST(f77dir)
if test "$enable_f77" = yes ; then
    AC_MSG_CHECKING([that we can build MPI programs with Fortran 77])
    rm -f conftest*
    cat >conftest.f <<EOF
        program main
        include 'mpif.h'
        integer ierr
	call mpi_init(ierr)
        call mpi_finalize(ierr)
        end
EOF
    if $FC -o conftest conftest.f >conftest.out 2>&1 ; then
        AC_MSG_RESULT(yes)
        otherlangs="$otherlangs f77"
	f77dir=f77
    else
        AC_MSG_RESULT(no)
    fi
    rm -f conftest*
fi
f90dir="#"
AC_SUBST(f90dir)
if test "$enable_f90" = yes ; then
    AC_MSG_CHECKING([that we can build MPI programs with Fortran 90])
    rm -f conftest*
    cat >conftest.f90 <<EOF
        program main
        use mpi
        integer ierr
	call mpi_init(ierr)
        call mpi_finalize(ierr)
        end
EOF
    if $F90 -o conftest conftest.f90 >conftest.out 2>&1 ; then
        AC_MSG_RESULT(yes)
        otherlangs="$otherlangs f90"
	f90dir=f90
    else
        AC_MSG_RESULT(no)
    fi
    rm -f conftest*
fi
# Simple tests for which other languages we can handle
cxxdir="#"
AC_SUBST(cxxdir)
if test "$enable_cxx" = yes ; then
    AC_MSG_CHECKING([that we can build MPI programs with C++])
    rm -f conftest*
    cat >conftest.cxx <<EOF
#include "mpi.h"
int main( int argc, char *argv[])
{
    MPI::Init();
    MPI::Finalize();
    return 0;
}    
EOF
    if $CXX -o conftest conftest.cxx >conftest.out 2>&1 ; then
        AC_MSG_RESULT(yes)
        otherlangs="$otherlangs cxx"
	cxxdir=cxx
    else
        AC_MSG_RESULT(no)
    fi
    rm -f conftest*
fi
# Find perl; used to create the F90 examples from F77 examples
AC_PATH_PROG(PERL,perl)
AC_SUBST(PERL)
AC_SUBST(otherlangs)
AC_SUBST(CC)
AC_SUBST(FC)
AC_SUBST(F90)
AC_SUBST(CXX)
AC_SUBST(CXXFLAGS)
AC_SUBST(MAKE)
AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)
if test -z "$MPILIBNAME" ; then MPILIBNAME=mpich ; fi
AC_SUBST(MPILIBNAME)
AC_OUTPUT_COMMANDS([chmod a+x f90/misc/f77tof90])
AC_OUTPUT(Makefile \
          basic/Makefile \
	  attr/Makefile \
	  util/Makefile \
	  coll/Makefile \
	  comm/Makefile \
	  datatype/Makefile \
	  errhan/Makefile \
	  group/Makefile \
	  info/Makefile \
	  init/Makefile \
	  pt2pt/Makefile \
          rma/Makefile \
	  spawn/Makefile \
	  topo/Makefile \
	  io/Makefile \
	  f77/Makefile \
	  f77/attr/Makefile \
	  f77/util/Makefile \
	  f77/coll/Makefile \
	  f77/rma/Makefile \
	  f90/Makefile \
	  f90/misc/Makefile \
	  f90/misc/f77tof90 \
	  cxx/Makefile \
	  cxx/util/Makefile \
	  cxx/coll/Makefile \
	  testlist \
	  )
